force-app/main/default/objects/Visit_Travel_Point__c/Visit_Travel_Point__c.object-meta.xml
<CustomObject>
    <label>Visit Travel Point</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Travel Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Travel Points</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>