force-app/main/default/objects/Visit_Travel_Point__c/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attendance</label>
    <referenceTo>Day_Attendance__c</referenceTo>
    <relationshipLabel>Travel Points</relationshipLabel>
    <relationshipName>TravelPoints</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>