force-app/main/default/objects/Visit_Travel_Point__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>