force-app/main/default/objects/Visit_Travel_Point__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>START_DAY</fullName>
                <label>Start Day</label>
            </value>
            <value>
                <fullName>CHECK_IN</fullName>
                <label>Check In</label>
            </value>
            <value>
                <fullName>CHECK_OUT</fullName>
                <label>Check Out</label>
            </value>
            <value>
                <fullName>END_DAY</fullName>
                <label>End Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>