force-app/main/default/objects/Visit_Travel_Point__c/fields/Segment_Distance_KM__c.field-meta.xml
<CustomField>
    <fullName>Segment_Distance_KM__c</fullName>
    <label>Segment Distance KM</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>