force-app/main/default/objects/Visit_Travel_Point__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SYSTEM</fullName>
                <default>true</default>
                <label>System</label>
            </value>
            <value>
                <fullName>MANUAL_ADJUSTMENT</fullName>
                <label>Manual Adjustment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>