force-app/main/default/objects/Visit_Travel_Point__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Travel Points</relationshipLabel>
    <relationshipName>TravelPoints</relationshipName>
    <type>Lookup</type>
</CustomField>